--- a/MVC_HW/Views/SalesOrders/Create.cshtml
+++ b/MVC_HW/Views/SalesOrders/Create.cshtml
@@ -217,7 +217,11 @@
             field: "",
             title: "小計",
             template: "#=total()#"
-        }
+            }, {
+             command:"destroy"
+               
+            }
+
             ], save: function (e) {
 
                 if (e.values.name !== "") {
